--- a/frontendclient/src/app/globals.css
+++ b/frontendclient/src/app/globals.css
@@ -2,6 +2,38 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Add this to your globals.css or styles.css */
+
+/* Customize the scrollbar for all elements */
+* {
+  scrollbar-width: thin; /* For Firefox */
+  scrollbar-color:  #f3f4f6; /* Thumb color and track color for Firefox */
+}
+
+/* Webkit-based browsers (Chrome, Safari, Edge, etc.) */
+::-webkit-scrollbar {
+  width: 8px; /* Adjust the width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f3f4f6; /* Color of the track (empty space of the scrollbar) */
+  border-radius: 10px; /* Rounded corners for the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #3b82f6; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Rounded corners for the thumb */
+  border: 2px solid #f3f4f6; /* Optional: Adding a border around the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #2563eb; /* Color of the thumb when hovered */
+}
+
+::-webkit-scrollbar-thumb:active {
+  background-color: #1d4ed8; /* Color of the thumb when clicked */
+}
+
 
 
 @layer base {
