--- a/frontendclient/src/app/globals.css
+++ b/frontendclient/src/app/globals.css
@@ -12,12 +12,12 @@
 
 /* Webkit-based browsers (Chrome, Safari, Edge, etc.) */
 ::-webkit-scrollbar {
-  width: 8px; /* Adjust the width of the scrollbar */
+  width: 3px; /* Adjust the width of the scrollbar */
 }
 
 ::-webkit-scrollbar-track {
   background: black; /* Color of the track (empty space of the scrollbar) */
-  border-radius: 10px; /* Rounded corners for the track */
+  border-radius: 0; /* Rounded corners for the track */
 }
 
 ::-webkit-scrollbar-thumb {
